--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>Airex {{page.title}}</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="{{page.meta_description}}">
+<meta name="author" content="{{page.meta_author}}">
 <link rel="icon" href="favicon.ico">
-
-<title></title>
 
 <!-- Bootstrap core CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet">
